--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
 				</div>
 			</div>
 		</section>
-		<!-- <div class="attribution">
+		<div class="attribution">
 			Challenge by
 			<a
 				href="https://www.frontendmentor.io?ref=challenge"
 				target="_blank"
 				>Frontend Mentor</a
 			>. Coded by <a href="#">Your Name Here</a>.
-		</div> -->
+		</div>
 		<script type="module" src="js/main.js"></script>
 		<script src="js/create-order.js"></script>
 	</body>
